<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">Phine</string>
    <string name="title_activity_main">Phine</string>
    <string name="package_name">com.mathvoyager.app</string>
    <string name="custom_url_scheme">com.mathvoyager.app</string>

    <string name="shortcut_review_short">Review</string>
    <string name="shortcut_review_long">Review due cards</string>
    <string name="shortcut_daily_short">Daily</string>
    <string name="shortcut_daily_long">Daily challenge</string>
    <string name="shortcut_quiz_short">Quiz</string>
    <string name="shortcut_quiz_long">Synthesis quiz</string>
</resources>
