<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="review"
        android:enabled="true"
        android:icon="@drawable/shortcut_review"
        android:shortcutShortLabel="@string/shortcut_review_short"
        android:shortcutLongLabel="@string/shortcut_review_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.mathvoyager.app"
            android:targetClass="com.mathvoyager.app.MainActivity"
            android:data="nous://review" />
    </shortcut>

    <shortcut
        android:shortcutId="daily"
        android:enabled="true"
        android:icon="@drawable/shortcut_daily"
        android:shortcutShortLabel="@string/shortcut_daily_short"
        android:shortcutLongLabel="@string/shortcut_daily_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.mathvoyager.app"
            android:targetClass="com.mathvoyager.app.MainActivity"
            android:data="nous://daily" />
    </shortcut>

    <shortcut
        android:shortcutId="quiz"
        android:enabled="true"
        android:icon="@drawable/shortcut_quiz"
        android:shortcutShortLabel="@string/shortcut_quiz_short"
        android:shortcutLongLabel="@string/shortcut_quiz_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.mathvoyager.app"
            android:targetClass="com.mathvoyager.app.MainActivity"
            android:data="nous://synthesis" />
    </shortcut>
</shortcuts>
